# Prezefren

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Prezefren.entitlements  PrezefrenApp.swift  PrezefrenTheme.swift  README.md  SECURITY.md  build.sh  build_distribution.sh  index.html  whisper_bridge.c  whisper_bridge.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Core/Audio/: AudioRecorder.swift
Core/Debug/: DebugLogger.swift  ResourceMonitor.swift
Core/Engine/: AudioDeviceManager.swift  SimpleAudioEngine.swift
Core/MenuBar/: MenuBarManager.swift
Core/Models/: AppState.swift  WindowTemplate.swift
Core/Preferences/: PreferencesManager.swift
Core/Services/: AssemblyAITranscriptionService.swift  EnhancedTranslationService.swift  EnvironmentConfig.swift  LanguageService.swift  WhisperModelManager.swift  WindowConfigurationManager.swift
UI/Components/: AnimatedTextView.swift  ProgressiveTextView.swift  SearchableLanguagePicker.swift  WordStreamingService.swift
UI/Debug/: DebugConsoleView.swift
UI/Preferences/: AppleTranslationIntegration.swift  PreferencesWindow.swift
UI/Views/: ContentView.swift  HelpView.swift  ModelsView.swift
UI/Windows/: FloatingPanel.swift
VirtualAudioDevice/: CMakeLists.txt  INTEGRATION_GUIDE.md  Info.plist.in  README.md  build_virtual_audio.sh
VirtualAudioDevice/Examples/: AudioEngineIntegration.md
VirtualAudioDevice/Headers/: AudioSplitter.h  PrezefrenDriver.h  PrezefrenVirtualDevice.h  VirtualAudioIntegration.h
VirtualAudioDevice/Source/: AudioSplitter.cpp  PrezefrenDriver.cpp  PrezefrenVirtualDevice.cpp  SwiftBridge.cpp  VirtualAudioIntegration.cpp
assets/css/: styles.css
assets/js/: main.js
docs/: INSTALLATION.md  PMD.md  TROUBLESHOOTING.md  USER_GUIDE.md  WHISPER_ENGINE_FIX_POST.md  WHISPER_ENGINE_FIX_PRE.md
scripts/: create_dmg.sh  create_github_release.sh  create_simple_dmg.sh  generate_app_icons.sh  nllb_translator.py  package_release.sh
